k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asciiartify
  namespace: asciiartify
spec:
  type: ClusterIP
  selector:
    app: asciiartify
  ports:
    - port: 80
      targetPort: 8000
